[gd_scene load_steps=5 format=3 uid="uid://jjon6b0mpoqe"]

[ext_resource type="Theme" uid="uid://b8l8dxk6ncn7s" path="res://2D/Font & Menu/default-ui.tres" id="1_0vuk4"]
[ext_resource type="Script" uid="uid://cn024fg64hp6g" path="res://2D/Font & Menu/combat_panel.gd" id="2_8vtlb"]
[ext_resource type="Texture2D" uid="uid://jkdxtognvfm3" path="res://2D/Original/menu.png" id="2_kimq3"]
[ext_resource type="PackedScene" uid="uid://ckvr206xukl34" path="res://2D/Font & Menu/HealthPellet.tscn" id="3_8vtlb"]

[node name="CombatPanel" type="CenterContainer"]
z_index = 40
z_as_relative = false
texture_filter = 1
offset_right = 160.0
offset_bottom = 52.015
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_0vuk4")
script = ExtResource("2_8vtlb")
pellet = ExtResource("3_8vtlb")

[node name="Container1" type="PanelContainer" parent="."]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Container1"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_0vuk4")
texture = ExtResource("2_kimq3")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="Container1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Container1/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextContainer" type="HBoxContainer" parent="Container1/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="UnitName" type="Label" parent="Container1/MarginContainer/VBoxContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Person1"

[node name="Space" type="Control" parent="Container1/MarginContainer/VBoxContainer/TextContainer"]
custom_minimum_size = Vector2(18.735, 0)
layout_mode = 2

[node name="HPCounter" type="Label" parent="Container1/MarginContainer/VBoxContainer/TextContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "99"
horizontal_alignment = 1
visible_characters = -2
visible_ratio = -1.0

[node name="Slash" type="Label" parent="Container1/MarginContainer/VBoxContainer/TextContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "/"

[node name="MaxHPCounter" type="Label" parent="Container1/MarginContainer/VBoxContainer/TextContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "99"
horizontal_alignment = 1

[node name="PelletContainer" type="GridContainer" parent="Container1/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
columns = 26
